--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
-    "sort-by": "^0.0.2"
+    "sort-by": "^0.0.2",
+    "three": "^0.166.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
