--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.108.4",
+    "@react-three/fiber": "^8.16.8",
     "localforage": "^1.10.0",
     "lucide-react": "^0.408.0",
     "match-sorter": "^6.3.4",
