--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@react-three/drei": "^9.108.4",
     "@react-three/fiber": "^8.16.8",
     "localforage": "^1.10.0",
     "lucide-react": "^0.408.0",
     "match-sorter": "^6.3.4",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.13.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "sort-by": "^0.0.2",
