--- a/package.json
+++ b/package.json
@@ -13,33 +13,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.5",
-    "@react-three/drei": "^9.108.4",
-    "@react-three/fiber": "^8.16.8",
-    "localforage": "^1.10.0",
-    "lucide-react": "^0.408.0",
-    "match-sorter": "^6.3.4",
-    "moment": "^2.30.1",
+    "framer-motion": "^11.3.17",
+    "gsap": "^3.12.5",
+    "locomotive-scroll": "^5.0.0-beta.13",
     "react": "^18.3.1",
-    "react-big-calendar": "^1.13.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.1",
-    "sort-by": "^0.0.2",
-    "three": "^0.166.1"
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
-    "@types/node": "^20.14.10",
+    "@klarr-agency/circum-icons-react": "^2.0.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "gh-pages": "^6.1.1",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.4",
-    "vite": "^5.3.1"
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.6",
+    "vite": "^5.3.4"
   }
 }
