--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new",
+  "name": "skill-issue-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,13 +15,11 @@
     "lucide-react": "^0.436.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@klarr-agency/circum-icons-react": "^2.0.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
